hungrycat (0.4) UNRELEASED; urgency=low

  * Fix “make distclean”, so that it removes also files generated by make,
    not only those generated by configure.
  * Improve the manual page, as per man-pages(7) recommendations:
    - Remove the “AUTHOR” section.

 -- Jakub Wilk <jwilk@jwilk.net>  Sat, 26 Jan 2013 17:34:17 +0100

hungrycat (0.3) unstable; urgency=low

  * Improve error handling.
  * Add option for using fallocate() with FALLOC_FL_PUNCH_HOLE.
  * Fix wrong output when input file was not larger than (2 × buffer size).

 -- Jakub Wilk <jwilk@jwilk.net>  Fri, 09 Mar 2012 01:23:00 +0100

hungrycat (0.2) unstable; urgency=low

  * Relicense to the Expat license.
  * Improve error handling.

 -- Jakub Wilk <jwilk@jwilk.net>  Thu, 11 Nov 2010 23:28:22 +0100

hungrycat (0.1) unstable; urgency=low

  * Initial release.

 -- Jakub Wilk <jwilk@jwilk.net>  Thu, 03 Dec 2009 09:31:48 +0100