@@ -4,8 +4,10 @@ hungrycat (0.4) UNRELEASED; urgency=low
     not only those generated by configure.
   * Improve the manual page, as per man-pages(7) recommendations:
     - Remove the “AUTHOR” section.
+    - Add references to cat(1), rm(1), truncate(1), ftruncate(2), and
+      fallocate(2) manpages.
 
- -- Jakub Wilk <jwilk@jwilk.net>  Sat, 26 Jan 2013 17:34:17 +0100
+ -- Jakub Wilk <jwilk@jwilk.net>  Sat, 26 Jan 2013 17:41:49 +0100
 
 hungrycat (0.3) unstable; urgency=low
 
